new section photos desktop

--- a/index.html
+++ b/index.html
@@ -849,86 +849,89 @@
             <div class="example example_1 example_white" style="margin-left: -284px">
                 <div class="example__points">85 и 80 баллов</div>
                 <div class="example__subject">Информатика и математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-nesmiyanov.svg">
-                    <div class="example__name">Матвей Несмиянов<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                    <div class="example__name"><span>Матвей Несмиянов</span><img src="images/comments/vk-icon.svg">
+                    </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">85, 84 и 84 балла</div>
                 <div class="example__subject">Информатика, русский язык и математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-tromanova.svg">
                     <div class="example__name">Влада Троманова<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example example_white">
                 <div class="example__points">84 балла</div>
                 <div class="example__subject">Информатика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-semyonova.svg">
                     <div class="example__name">Софья Семёнова<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">86, 83 и 82 балла</div>
                 <div class="example__subject">Русский язык, физика и математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-skarulin.svg">
                     <div class="example__name">Илья Калинин<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">84 балла</div>
                 <div class="example__subject">Математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-tulpa.svg">
                     <div class="example__name">Евгений Тюльпа <br><img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example example_white">
                 <div class="example__points">86, 85 и 82 балла</div>
                 <div class="example__subject">Русский язык, физика и математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-vaulina.svg">
                     <div class="example__name">Анна Ваулина<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">86 и 83 балла</div>
                 <div class="example__subject">Русский язык, физика и математика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-skarulin.svg">
                     <div class="example__name">Андрей Скарулин<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example example_white">
                 <div class="example__points">84 балла</div>
                 <div class="example__subject">Русский язык ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-suhanova.svg">
                     <div class="example__name">Саша Суханова<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">83 балла</div>
                 <div class="example__subject">Информатика ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
                     <img src="images/examples/example-sergeeva.svg">
                     <div class="example__name">Настя Сергеева<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
             <div class="example">
                 <div class="example__points">85 и 80 баллов</div>
                 <div class="example__subject">Информатика и русский язык ЕГЭ</div>
-                <div style="display: flex">
+                <a href="#" class="example__link">
+
                     <img src="images/examples/example-berdugin.svg">
                     <div class="example__name">Антон Бердюгин<img src="images/comments/vk-icon.svg"></div>
-                </div>
+                </a>
             </div>
         </div>
         <div style="display: flex; margin: 64px auto 120px">
-            <div class="slider__button slider__button__left slider__button__left__examples" style="margin-right: 12px" onclick="slideExampleLeft()">
+            <div class="slider__button slider__button__left slider__button__left__examples" style="margin-right: 12px"
+                 onclick="slideExampleLeft()">
                 <!--                    <img class="slider__button__arrow-left" src="images/slider/arrow-left.svg">-->
             </div>
             <div class="slider__button slider__button_right" onclick="slideExampleRight()">
@@ -1035,7 +1038,44 @@
 
     </form>
 </section>
+<section class="photos">
 
+    <!--    <div class="photos__wrapper">-->
+    <div class="photos__left">
+        <div style="z-index: 5"></div>
+        <div class="photo__bg">
+            <img src="images/photos/photo-2.svg">
+        </div>
+        <img id="photo-1" src="images/photos/photo-1.svg">
+        <div style="display: flex;">
+            <div class="photos__alert">У тебя всё получится<br>❤</div>
+            <img id="photo-3" src="images/photos/photo-3.svg">
+        </div>
+    </div>
+    <div class="photos__middle">
+        <div class="emojis">
+            <div class="emojis__mobile">
+                <img src="images/photos/emoji-1.svg" class="emoji">
+                <img src="images/photos/emoji-2.svg" class="emoji">
+                <img src="images/photos/emoji-3.svg" class="emoji">
+                <img src="images/photos/emoji-4.svg" class="emoji">
+                <img src="images/photos/emoji-5.svg" class="emoji">
+            </div>
+            <div class="mobile hidden">
+                <img src="images/photos/emoji-6.svg" class="emoji">
+                <img src="images/photos/emoji-7.svg" class="emoji">
+                <img src="images/photos/emoji-8.svg" class="emoji">
+            </div>
+        </div>
+        <img id="photo-middle" src="images/photos/photo-middle.svg">
+        <div id="photo-logo"><img src="images/logo.svg"></div>
+        <!--        </div>-->
+    </div>
+    <div class="photos__right">
+        <img src="images/photos/photo-4.svg">
+        <img id="photo-5" src="images/photos/photo-5.svg">
+    </div>
+</section>
 <section class="footer">
     <div class="footer__info">
         <div class="footer__links">
