fixed mobile teachers-slider

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         <a href="#" class="teachers__link"><span>Узнать о преподавателях</span> <img src="images/ArrowRight.svg"> </a>
     </div>
     <div class="teachers">
-        <div class="teachers__slider mobile__hidden">
+        <div class="teachers__slider">
             <div class="teachers__slides">
                 <input checked type="radio" name="teachers__slider__r" id="teachers__slider__radio1">
                 <input type="radio" name="teachers__slider__r" id="teachers__slider__radio2">
@@ -663,15 +663,15 @@
                         </div>
                         <div style="display: flex; align-items: center; margin: 28px 0 12px">
                             <img src="images/teachers/bio-icon.svg">
-                            <div class="teacher__name">Евгения Орлова</div>
+                            <div class="teacher__name">Александр Белоусов</div>
                         </div>
-                        <div class="teacher__education">HR-директор. Закончила РАНХиГС и РГППУ,
-                            преподаёт историю и обществознание
+                        <div class="teacher__education">Закончил УГМУ, преподаёт биологию
                         </div>
-                        <div class="teacher__experience">Преподаватель первой квалификационной категории;<br>
-                            Автор и ведущий тренингов по профессиональной подготовке;<br>
-                            9 лет готовит к ЕГЭ и ОГЭ.
+                        <div class="teacher__experience">Неоднократный победитель и призер регионального этапа Всероссийской олимпиады по биологии;
+                            <br><br>Автор более 15 научных статей в РИНЦ, ВАК и местных журналах.
                         </div>
+                    </div>
+                    <div class="teacher" style="width: 302px; width: 600px">
                     </div>
                 </div>
             </div>
