fix 2 teachers-slider

--- a/index.html
+++ b/index.html
@@ -533,7 +533,9 @@
                             9 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
-                    <div class="teacher">
+                </div> <!-- это и след -->
+                <div class="teachers__slide">
+                <div class="teacher">
                         <div class="teacher__photo">
                             <img src="images/teachers/english-teacher.svg">
                             <div class="teacher__photo__bg"></div>
@@ -569,6 +571,8 @@
                             5 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
+                </div> <!-- это и след -->
+                <div class="teachers__slide">
                     <div class="teacher">
                         <div class="teacher__photo">
                             <img src="images/teachers/social-science-teacher2.svg">
