fix 3 teachers-slider(new slide blocks)

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
                             9 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
-                </div> <!-- это и след -->
+                </div>
                 <div class="teachers__slide">
                 <div class="teacher">
                         <div class="teacher__photo">
@@ -571,7 +571,7 @@
                             5 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
-                </div> <!-- это и след -->
+                </div>
                 <div class="teachers__slide">
                     <div class="teacher">
                         <div class="teacher__photo">
@@ -607,6 +607,8 @@
                             7 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
+                </div>
+                <div class="teachers__slide">
                     <div class="teacher">
                         <div class="teacher__photo">
                             <img src="images/teachers/chemistry-teacher.svg">
@@ -641,6 +643,8 @@
                             7 лет готовит к ЕГЭ и ОГЭ.
                         </div>
                     </div>
+                </div>
+                <div class="teachers__slide">
                     <div class="teacher">
                         <div class="teacher__photo">
                             <img src="images/teachers/math-teacher.svg">
@@ -675,7 +679,9 @@
                             <br><br>Автор более 15 научных статей в РИНЦ, ВАК и местных журналах.
                         </div>
                     </div>
-                    <div class="teacher" style="width: 302px; width: 600px">
+                </div>
+                <div class="teachers__slide">
+                    <div class="teacher" style="width: 302px; height: 600px">
                     </div>
                 </div>
             </div>
